# 1 two sum test
add_executable(1two_sum_test ./1two_sum_test.cpp)
target_link_libraries(1two_sum_test gtest_main)
target_include_directories(1two_sum_test PRIVATE ../include)

# 2 add two numbers test
add_executable(2add_two_numbers_test ./2add_two_numbers_test.cpp)
target_link_libraries(2add_two_numbers_test gtest_main)
target_include_directories(2add_two_numbers_test PRIVATE ../include)

# 3 longest substring without repeating characters test
add_executable(3longest_substring_without_repeating_characters_test ./3longest_substring_without_repeating_characters_test.cpp)
target_link_libraries(3longest_substring_without_repeating_characters_test gtest_main)
target_include_directories(3longest_substring_without_repeating_characters_test PRIVATE ../include)

# 4 median of two sorted arrays test
add_executable(4median_of_two_sorted_arrays_test ./4median_of_two_sorted_arrays_test.cpp)
target_link_libraries(4median_of_two_sorted_arrays_test gtest_main)
target_include_directories(4median_of_two_sorted_arrays_test PRIVATE ../include)

# 5 longest palindromic substring test
add_executable(5longest_palindromic_substring_test ./5longest_palindromic_substring_test.cpp)
target_link_libraries(5longest_palindromic_substring_test gtest_main)
target_include_directories(5longest_palindromic_substring_test PRIVATE ../include)

# ==================================================================

# 11 container with most water test
add_executable(11container_with_most_water_test ./11container_with_most_water_test.cpp)
target_link_libraries(11container_with_most_water_test gtest_main)
target_include_directories(11container_with_most_water_test PRIVATE ../include)

# 15 three sum test
add_executable(15three_sum_test ./15three_sum_test.cpp)
target_link_libraries(15three_sum_test gtest_main)
target_include_directories(15three_sum_test PRIVATE ../include)

# ==================================================================

# 17 letter combinations of a phone number test
add_executable(17letter_combinations_of_a_phone_number_test ./17letter_combinations_of_a_phone_number_test.cpp)
target_link_libraries(17letter_combinations_of_a_phone_number_test gtest_main)
target_include_directories(17letter_combinations_of_a_phone_number_test PRIVATE ../include)

# 19 remove nth node from end of list test
add_executable(19remove_nth_node_from_end_of_list_test ./19remove_nth_node_from_end_of_list_test.cpp)
target_link_libraries(19remove_nth_node_from_end_of_list_test gtest_main)
target_include_directories(19remove_nth_node_from_end_of_list_test PRIVATE ../include)

# 20 valid parentheses test
add_executable(20valid_parentheses_test ./20valid_parentheses_test.cpp)
target_link_libraries(20valid_parentheses_test gtest_main)
target_include_directories(20valid_parentheses_test PRIVATE ../include)

# ==================================================================

# 21 merge two sorted lists test
add_executable(21merge_two_sorted_lists_test ./21merge_two_sorted_lists_test.cpp)
target_link_libraries(21merge_two_sorted_lists_test gtest_main)
target_include_directories(21merge_two_sorted_lists_test PRIVATE ../include)

# 22 generate parentheses test
add_executable(22generate_parentheses_test ./22generate_parentheses_test.cpp)
target_link_libraries(22generate_parentheses_test gtest_main)
target_include_directories(22generate_parentheses_test PRIVATE ../include)

# 23 merge k sorted list test
add_executable(23merge_k_sorted_lists_test ./23merge_k_sorted_lists_test.cpp)
target_link_libraries(23merge_k_sorted_lists_test gtest_main)
target_include_directories(23merge_k_sorted_lists_test PRIVATE ../include)

# 25 reverse nodes in k group test
add_executable(25reverse_nodes_in_k_group_test ./25reverse_nodes_in_k_group_test.cpp)
target_link_libraries(25reverse_nodes_in_k_group_test gtest_main)
target_include_directories(25reverse_nodes_in_k_group_test PRIVATE ../include)

# ==================================================================

# 33 search in rotated sorted array test
add_executable(33search_in_rotated_sorted_array_test ./33search_in_rotated_sorted_array_test.cpp)
target_link_libraries(33search_in_rotated_sorted_array_test gtest_main)
target_include_directories(33search_in_rotated_sorted_array_test PRIVATE ../include)

# 36 valid sudoku test
add_executable(36valid_sudoku_test ./36valid_sudoku_test.cpp)
target_link_libraries(36valid_sudoku_test gtest_main)
target_include_directories(36valid_sudoku_test PRIVATE ../include)

# 39 combination sum test
add_executable(39combination_sum_test ./39combination_sum_test.cpp)
target_link_libraries(39combination_sum_test gtest_main)
target_include_directories(39combination_sum_test PRIVATE ../include)

# ==================================================================

# 40 combination sum ii test
add_executable(40combination_sum_ii_test ./40combination_sum_ii_test.cpp)
target_link_libraries(40combination_sum_ii_test gtest_main)
target_include_directories(40combination_sum_ii_test PRIVATE ../include)

# 42 trapping rain
add_executable(42trapping_rain_water_test ./42trapping_rain_water_test.cpp)
target_link_libraries(42trapping_rain_water_test gtest_main)
target_include_directories(42trapping_rain_water_test PRIVATE ../include)

# ==================================================================

# 46 permutations test
add_executable(46permutations_test ./46permutations_test.cpp)
target_link_libraries(46permutations_test gtest_main)
target_include_directories(46permutations_test PRIVATE ../include)

# 49 group anagrams test
add_executable(49group_anagrams_test ./49group_anagrams_test.cpp)
target_link_libraries(49group_anagrams_test gtest_main)
target_include_directories(49group_anagrams_test PRIVATE ../include)

# ==================================================================

# 51 n queens test
add_executable(51n_queens_test ./51n_queens_test.cpp)
target_link_libraries(51n_queens_test gtest_main)
target_include_directories(51n_queens_test PRIVATE ../include)

# 52 maximum subarray test
add_executable(53maximum_subarray_test ./53maximum_subarray_test.cpp)
target_link_libraries(53maximum_subarray_test gtest_main)
target_include_directories(53maximum_subarray_test PRIVATE ../include)

# ==================================================================

# 70 climbing stairs test
add_executable(70climbing_stairs_test ./70climbing_stairs_test.cpp)
target_link_libraries(70climbing_stairs_test gtest_main)
target_include_directories(70climbing_stairs_test PRIVATE ../include)

# ==================================================================

# 74 search a 2d matrix test
add_executable(74search_a_2d_matrix_test ./74search_a_2d_matrix_test.cpp)
target_link_libraries(74search_a_2d_matrix_test gtest_main)
target_include_directories(74search_a_2d_matrix_test PRIVATE ../include)

# 76 minimum window substring test
add_executable(76minimum_window_substring_test ./76minimum_window_substring_test.cpp)
target_link_libraries(76minimum_window_substring_test gtest_main)
target_include_directories(76minimum_window_substring_test PRIVATE ../include)

# 78 subsets test
add_executable(78subsets_test ./78subsets_test.cpp)
target_link_libraries(78subsets_test gtest_main)
target_include_directories(78subsets_test PRIVATE ../include)

# 79 word search test
add_executable(79word_search_test ./79word_search_test.cpp)
target_link_libraries(79word_search_test gtest_main)
target_include_directories(79word_search_test PRIVATE ../include)

# ==================================================================

# 84 largest rectangle in histogram test
add_executable(84largest_rectangle_in_histogram_test ./84largest_rectangle_in_histogram_test.cpp)
target_link_libraries(84largest_rectangle_in_histogram_test gtest_main)
target_include_directories(84largest_rectangle_in_histogram_test PRIVATE ../include)

# ==================================================================

# 90 subsets ii test
add_executable(90subsets_ii_test ./90subsets_ii_test.cpp)
target_link_libraries(90subsets_ii_test gtest_main)
target_include_directories(90subsets_ii_test PRIVATE ../include)

# 91 decode ways test
add_executable(91decode_ways_test ./91decode_ways_test.cpp)
target_link_libraries(91decode_ways_test gtest_main)
target_include_directories(91decode_ways_test PRIVATE ../include)

# 92 reverse linked list ii test
add_executable(92reverse_linked_list_ii_test ./92reverse_linked_list_ii_test.cpp)
target_link_libraries(92reverse_linked_list_ii_test gtest_main)
target_include_directories(92reverse_linked_list_ii_test PRIVATE ../include)

# ==================================================================

# 98 validtate binary search tree test
add_executable(98validate_binary_search_tree_test ./98validate_binary_search_tree_test.cpp)
target_link_libraries(98validate_binary_search_tree_test gtest_main)
target_include_directories(98validate_binary_search_tree_test PRIVATE ../include)

# ==================================================================

# 100 same tree test
add_executable(100same_tree_test ./100same_tree_test.cpp)
target_link_libraries(100same_tree_test gtest_main)
target_include_directories(100same_tree_test PRIVATE ../include)

# 102 binary tree level order traversal test
add_executable(102binary_tree_level_order_traversal_test ./102binary_tree_level_order_traversal_test.cpp)
target_link_libraries(102binary_tree_level_order_traversal_test gtest_main)
target_include_directories(102binary_tree_level_order_traversal_test PRIVATE ../include)

# 104 maximum depth of binary tree test
add_executable(104maximum_depth_of_binary_tree_test ./104maximum_depth_of_binary_tree_test.cpp)
target_link_libraries(104maximum_depth_of_binary_tree_test gtest_main)
target_include_directories(104maximum_depth_of_binary_tree_test PRIVATE ../include)

# 105 construct binary tree rom preorder and inorder traversal test
add_executable(105construct_binary_tree_from_preorder_and_inorder_traversal_test ./105construct_binary_tree_from_preorder_and_inorder_traversal_test.cpp)
target_link_libraries(105construct_binary_tree_from_preorder_and_inorder_traversal_test gtest_main)
target_include_directories(105construct_binary_tree_from_preorder_and_inorder_traversal_test PRIVATE ../include)

# ==================================================================

# 110 balanced binary tree test
add_executable(110balanced_binary_tree_test ./110balanced_binary_tree_test.cpp)
target_link_libraries(110balanced_binary_tree_test gtest_main)
target_include_directories(110balanced_binary_tree_test PRIVATE ../include)

# ==================================================================

# 121 best time to buy and sell stock test
add_executable(121best_time_to_buy_and_sell_stock_test ./121best_time_to_buy_and_sell_stock_test.cpp)
target_link_libraries(121best_time_to_buy_and_sell_stock_test gtest_main)
target_include_directories(121best_time_to_buy_and_sell_stock_test PRIVATE ../include)

# 124
add_executable(124binary_tree_maximum_path_sum_test ./124binary_tree_maximum_path_sum_test.cpp)
target_link_libraries(124binary_tree_maximum_path_sum_test gtest_main)
target_include_directories(124binary_tree_maximum_path_sum_test PRIVATE ../include)

# 125 valid palindrome test
add_executable(125valid_palindrome_test ./125valid_palindrome_test.cpp)
target_link_libraries(125valid_palindrome_test gtest_main)
target_include_directories(125valid_palindrome_test PRIVATE ../include)

# 128 longest consecutive sequence test
add_executable(128longest_consecutive_sequence_test ./128longest_consecutive_sequence_test.cpp)
target_link_libraries(128longest_consecutive_sequence_test gtest_main)
target_include_directories(128longest_consecutive_sequence_test PRIVATE ../include)

# ==================================================================

# 131 palindrome partitioning test
add_executable(131palindrome_partitioning_test ./131palindrome_partitioning_test.cpp)
target_link_libraries(131palindrome_partitioning_test gtest_main)
target_include_directories(131palindrome_partitioning_test PRIVATE ../include)

# ==================================================================

# 138 copy list with random pointer test
add_executable(138copy_list_with_random_pointer_test ./138copy_list_with_random_pointer_test.cpp)
target_link_libraries(138copy_list_with_random_pointer_test gtest_main)
target_include_directories(138copy_list_with_random_pointer_test PRIVATE ../include)

# 139 word break test
add_executable(139word_break_test ./139word_break_test.cpp)
target_link_libraries(139word_break_test gtest_main)
target_include_directories(139word_break_test PRIVATE ../include)

# ==================================================================

# 141 linked list cycle test
add_executable(141linked_list_cycle_test ./141linked_list_cycle_test.cpp)
target_link_libraries(141linked_list_cycle_test gtest_main)
target_include_directories(141linked_list_cycle_test PRIVATE ../include)

# 143 reorder list test
add_executable(143reorder_list_test ./143reorder_list_test.cpp)
target_link_libraries(143reorder_list_test gtest_main)
target_include_directories(143reorder_list_test PRIVATE ../include)

# 146 lru cache test
add_executable(146lru_cache_test ./146lru_cache_test.cpp)
target_link_libraries(146lru_cache_test gtest_main)
target_include_directories(146lru_cache_test PRIVATE ../include)

# ==================================================================

# 150 evaluate reverse polish notation test
add_executable(150evaluate_reverse_polish_notation_test ./150evaluate_reverse_polish_notation_test.cpp)
target_link_libraries(150evaluate_reverse_polish_notation_test gtest_main)
target_include_directories(150evaluate_reverse_polish_notation_test PRIVATE ../include)

# 152 maximum product subarray test
add_executable(152maximum_product_subarray_test ./152maximum_product_subarray_test.cpp)
target_link_libraries(152maximum_product_subarray_test gtest_main)
target_include_directories(152maximum_product_subarray_test PRIVATE ../include)

# 153 find minimum in rotated sorted array
add_executable(153find_minimum_in_rotated_sorted_array_test ./153find_minimum_in_rotated_sorted_array_test.cpp)
target_link_libraries(153find_minimum_in_rotated_sorted_array_test gtest_main)
target_include_directories(153find_minimum_in_rotated_sorted_array_test PRIVATE ../include)

# 155 min stack test
add_executable(155min_stack_test ./155min_stack_test.cpp)
target_link_libraries(155min_stack_test gtest_main)
target_include_directories(155min_stack_test PRIVATE ../include)

# ==================================================================

# 167 add two numbers ii test
add_executable(167two_sum_ii_test ./167two_sum_ii_test.cpp)
target_link_libraries(167two_sum_ii_test gtest_main)
target_include_directories(167two_sum_ii_test PRIVATE ../include)

# ==================================================================

# 198 house robber test
add_executable(198house_robber_test ./198house_robber_test.cpp)
target_link_libraries(198house_robber_test gtest_main)
target_include_directories(198house_robber_test PRIVATE ../include)

# 199 binary tree right side view test
add_executable(199binary_tree_right_side_view_test ./199binary_tree_right_side_view_test.cpp)
target_link_libraries(199binary_tree_right_side_view_test gtest_main)
target_include_directories(199binary_tree_right_side_view_test PRIVATE ../include)

# 206 reverse linked list test
add_executable(206reverse_linked_list_test ./206reverse_linked_list_test.cpp)
target_link_libraries(206reverse_linked_list_test gtest_main)
target_include_directories(206reverse_linked_list_test PRIVATE ../include)

# 208 implement trie prefix tree test
add_executable(208implement_trie_prefix_tree_test ./208implement_trie_prefix_tree_test.cpp)
target_link_libraries(208implement_trie_prefix_tree_test gtest_main)
target_include_directories(208implement_trie_prefix_tree_test PRIVATE ../include)

# ==================================================================

# 211 design add and search words data structure test
add_executable(211design_add_and_search_words_data_structure_test ./211design_add_and_search_words_data_structure_test.cpp)
target_link_libraries(211design_add_and_search_words_data_structure_test gtest_main)
target_include_directories(211design_add_and_search_words_data_structure_test PRIVATE ../include)

# 212 word search ii test
add_executable(212word_search_ii_test ./212word_search_ii_test.cpp)
target_link_libraries(212word_search_ii_test gtest_main)
target_include_directories(212word_search_ii_test PRIVATE ../include)

# 213 house robber ii test
add_executable(213house_robber_ii_test ./213house_robber_ii_test.cpp)
target_link_libraries(213house_robber_ii_test gtest_main)
target_include_directories(213house_robber_ii_test PRIVATE ../include)

# ==================================================================

# 217 contains duplicate test
add_executable(217contains_duplicate_test ./217contains_duplicate_test.cpp)
target_link_libraries(217contains_duplicate_test gtest_main)
target_include_directories(217contains_duplicate_test PRIVATE ../include)

# 226 invert binary tree
add_executable(226invert_binary_tree_test ./226invert_binary_tree_test.cpp)
target_link_libraries(226invert_binary_tree_test gtest_main)
target_include_directories(226invert_binary_tree_test PRIVATE ../include)

# ==================================================================

# 230 kth smallest element in a binary search tree test
add_executable(230kth_smallest_element_in_a_bst_test ./230kth_smallest_element_in_a_bst_test.cpp)
target_link_libraries(230kth_smallest_element_in_a_bst_test gtest_main)
target_include_directories(230kth_smallest_element_in_a_bst_test PRIVATE ../include)

# ==================================================================

# 235 lowest common ancestor of a binary search tree test
add_executable(235lowest_common_ancestor_of_a_binary_search_tree_test ./235lowest_common_ancestor_of_a_binary_search_tree_test.cpp)
target_link_libraries(235lowest_common_ancestor_of_a_binary_search_tree_test gtest_main)
target_include_directories(235lowest_common_ancestor_of_a_binary_search_tree_test PRIVATE ../include)

# 236 lowest common ancestor of a binary tree test
add_executable(236lowest_common_ancestor_of_a_binary_tree_test ./236lowest_common_ancestor_of_a_binary_tree_test.cpp)
target_link_libraries(236lowest_common_ancestor_of_a_binary_tree_test gtest_main)
target_include_directories(236lowest_common_ancestor_of_a_binary_tree_test PRIVATE ../include)

# 238 product of array except self test
add_executable(238product_of_array_except_self_test ./238product_of_array_except_self_test.cpp)
target_link_libraries(238product_of_array_except_self_test gtest_main)
target_include_directories(238product_of_array_except_self_test PRIVATE ../include)

# 239 sliding window maximum test
add_executable(239sliding_window_maximum_test ./239sliding_window_maximum_test.cpp)
target_link_libraries(239sliding_window_maximum_test gtest_main)
target_include_directories(239sliding_window_maximum_test PRIVATE ../include)

# ==================================================================

# 242 valid anagram test
add_executable(242valid_anagram_test ./242valid_anagram_test.cpp)
target_link_libraries(242valid_anagram_test gtest_main)
target_include_directories(242valid_anagram_test PRIVATE ../include)

# 271 encode and decode strings
add_executable(271encode_and_decode_strings_test ./271encode_and_decode_strings_test.cpp)
target_link_libraries(271encode_and_decode_strings_test gtest_main)
target_include_directories(271encode_and_decode_strings_test PRIVATE ../include)

# 287 find the duplicate number test
add_executable(287find_the_duplicate_number_test ./287find_the_duplicate_number_test.cpp)
target_link_libraries(287find_the_duplicate_number_test gtest_main)
target_include_directories(287find_the_duplicate_number_test PRIVATE ../include)

# 297 serialize and deserialize binary tree test
add_executable(297serialize_and_deserialize_binary_tree_test ./297serialize_and_deserialize_binary_tree_test.cpp)
target_link_libraries(297serialize_and_deserialize_binary_tree_test gtest_main)
target_include_directories(297serialize_and_deserialize_binary_tree_test PRIVATE ../include)

# ==================================================================

# 300 longest increasing subsequence test
add_executable(300longest_increasing_subsequence_test ./300longest_increasing_subsequence_test.cpp)
target_link_libraries(300longest_increasing_subsequence_test gtest_main)
target_include_directories(300longest_increasing_subsequence_test PRIVATE ../include)

# ==================================================================

# 322 coin change test
add_executable(322coin_change_test ./322coin_change_test.cpp)
target_link_libraries(322coin_change_test gtest_main)
target_include_directories(322coin_change_test PRIVATE ../include)

# 347 top k frequent elements test
add_executable(347top_k_frequent_elements_test ./347top_k_frequent_elements_test.cpp)
target_link_libraries(347top_k_frequent_elements_test gtest_main)
target_include_directories(347top_k_frequent_elements_test PRIVATE ../include)

# ==================================================================

#  424 longest repeating character replacement test
add_executable(424longest_repeating_character_replacement_test ./424longest_repeating_character_replacement_test.cpp)
target_link_libraries(424longest_repeating_character_replacement_test gtest_main)
target_include_directories(424longest_repeating_character_replacement_test PRIVATE ../include)

# 496 next greater element i test
add_executable(496next_greater_element_i_test ./496next_greater_element_i_test.cpp)
target_link_libraries(496next_greater_element_i_test gtest_main)
target_include_directories(496next_greater_element_i_test PRIVATE ../include)

# ==================================================================

# 509 fibonacci number test
add_executable(509fibonacci_number_test ./509fibonacci_number_test.cpp)
target_link_libraries(509fibonacci_number_test gtest_main)
target_include_directories(509fibonacci_number_test PRIVATE ../include)

# ==================================================================

# 518 coin change ii test
add_executable(518coin_change_ii_test ./518coin_change_ii_test.cpp)
target_link_libraries(518coin_change_ii_test gtest_main)
target_include_directories(518coin_change_ii_test PRIVATE ../include)

# 543 diameter of binary tree test
add_executable(543diameter_of_binary_tree_test ./543diameter_of_binary_tree_test.cpp)
target_link_libraries(543diameter_of_binary_tree_test gtest_main)
target_include_directories(543diameter_of_binary_tree_test PRIVATE ../include)

# 567 permutation in string test 
add_executable(567permutation_in_string_test ./567permutation_in_string_test.cpp)
target_link_libraries(567permutation_in_string_test gtest_main)
target_include_directories(567permutation_in_string_test PRIVATE ../include)

# 572 subtree of another tree test
add_executable(572subtree_of_another_tree_test ./572subtree_of_another_tree_test.cpp)
target_link_libraries(572subtree_of_another_tree_test gtest_main)
target_include_directories(572subtree_of_another_tree_test PRIVATE ../include)

# ==================================================================

# 647 palindromic substrings test
add_executable(647palindromic_substrings_test ./647palindromic_substrings_test.cpp)
target_link_libraries(647palindromic_substrings_test gtest_main)
target_include_directories(647palindromic_substrings_test PRIVATE ../include)

# ==================================================================

# 704 binary search test
add_executable(704binary_search_test ./704binary_search_test.cpp)
target_link_libraries(704binary_search_test gtest_main)
target_include_directories(704binary_search_test PRIVATE ../include)

# 739 daily temperature test
add_executable(739daily_temperatures_test ./739daily_temperatures_test.cpp)
target_link_libraries(739daily_temperatures_test gtest_main)
target_include_directories(739daily_temperatures_test PRIVATE ../include)

# 746 min cost climbing stairs test
add_executable(746min_cost_climbing_stairs_test ./746min_cost_climbing_stairs_test.cpp)
target_link_libraries(746min_cost_climbing_stairs_test gtest_main)
target_include_directories(746min_cost_climbing_stairs_test PRIVATE ../include)

# ==================================================================

# 835 car fleet test
add_executable(853car_fleet_test ./853car_fleet_test.cpp)
target_link_libraries(853car_fleet_test gtest_main)
target_include_directories(853car_fleet_test PRIVATE ../include)

# 875 koko eating bananas test
add_executable(875koko_eating_bananas_test ./875koko_eating_bananas_test.cpp)
target_link_libraries(875koko_eating_bananas_test gtest_main)
target_include_directories(875koko_eating_bananas_test PRIVATE ../include)

# 876 middle of the linked list test
add_executable(876middle_of_the_linked_list_test ./876middle_of_the_linked_list_test.cpp)
target_link_libraries(876middle_of_the_linked_list_test gtest_main)
target_include_directories(876middle_of_the_linked_list_test PRIVATE ../include)

# 981 time based key value store test
add_executable(981time_based_key_value_store_test ./981time_based_key_value_store_test.cpp)
target_link_libraries(981time_based_key_value_store_test gtest_main)
target_include_directories(981time_based_key_value_store_test PRIVATE ../include)

# ==================================================================

# 1448 count good nodes in binary tree test
add_executable(1448count_good_nodes_in_binary_tree_test ./1448count_good_nodes_in_binary_tree_test.cpp)
target_link_libraries(1448count_good_nodes_in_binary_tree_test gtest_main)
target_include_directories(1448count_good_nodes_in_binary_tree_test PRIVATE ../include)

# ==================================================================

# 1804 implement trie ii prefix tree test
add_executable(1804implement_trie_ii_prefix_tree_test ./1804implement_trie_ii_prefix_tree_test.cpp)
target_link_libraries(1804implement_trie_ii_prefix_tree_test gtest_main)
target_include_directories(1804implement_trie_ii_prefix_tree_test PRIVATE ../include)

# ==================================================================

# 2574 left and right sum difference test
add_executable(2574left_and_right_sum_differences_test ./2574left_and_right_sum_differences_test.cpp)
target_link_libraries(2574left_and_right_sum_differences_test gtest_main)
target_include_directories(2574left_and_right_sum_differences_test PRIVATE ../include)

# ==================================================================

# Add tests
include(GoogleTest)
add_test(NAME 1two_sum_test COMMAND 1two_sum_test)
add_test(NAME 2add_two_numbers_test COMMAND 2add_two_numbers_test)
add_test(NAME 3longest_substring_without_repeating_characters_test COMMAND 3longest_substring_without_repeating_characters_test)
add_test(NAME 4median_of_two_sorted_arrays_test COMMAND 4median_of_two_sorted_arrays_test)
add_test(NAME 5longest_palindromic_substring_test COMMAND 5longest_palindromic_substring_test)

add_test(NAME 11container_with_most_water_test COMMAND 11container_with_most_water_test)
add_test(NAME 15three_sum_test COMMAND 15three_sum_test)

add_test(NAME 17letter_combinations_of_a_phone_number_test COMMAND 17letter_combinations_of_a_phone_number_test)
add_test(NAME 19remove_nth_node_from_end_of_list_test COMMAND 19remove_nth_node_from_end_of_list_test)
add_test(NAME 20valid_parentheses_test COMMAND 20valid_parentheses_test)

add_test(NAME 21merge_two_sorted_lists_test COMMAND 21merge_two_sorted_lists_test)
add_test(NAME 22generate_parentheses_test COMMAND 22generate_parentheses_test)
add_test(NAME 23merge_k_sorted_lists_test COMMAND 23merge_k_sorted_lists_test)
add_test(NAME 25reverse_nodes_in_k_group_test COMMAND 25reverse_nodes_in_k_group_test)

add_test(NAME 33search_in_rotated_sorted_array_test COMMAND 33search_in_rotated_sorted_array_test)
add_test(NAME 36valid_sudoku_test COMMAND 36valid_sudoku_test)
add_test(NAME 39combination_sum_test COMMAND 39combination_sum_test)

add_test(NAME 40combination_sum_ii_test COMMAND 40combination_sum_ii_test)
add_test(NAME 42trapping_rain_water_test COMMAND 42trapping_rain_water_test)

add_test(NAME 46permutations_test COMMAND 46permutations_test)
add_test(NAME 49group_anagrams_test COMMAND 49group_anagrams_test)

add_test(NAME 51n_queens_test COMMAND 51n_queens_test)
add_test(NAME 53maximum_subarray_test COMMAND 53maximum_subarray_test)

add_test(NAME 70climbing_stairs_test COMMAND 70climbing_stairs_test)

add_test(NAME 74search_a_2d_matrix_test COMMAND 74search_a_2d_matrix_test)
add_test(NAME 76minimum_window_substring_test COMMAND 76minimum_window_substring_test)
add_test(NAME 78subsets_test COMMAND 78subsets_test)
add_test(NAME 79word_search_test COMMAND 79word_search_test)

add_test(NAME 84largest_rectangle_in_histogram_test COMMAND 84largest_rectangle_in_histogram_test)

add_test(NAME 90subsets_ii_test COMMAND 90subsets_ii_test)
add_test(NAME 91decode_ways_test COMMAND 91decode_ways_test)
add_test(NAME 92reverse_linked_list_ii_test COMMAND 92reverse_linked_list_ii_test)

add_test(NAME 98validate_binary_search_tree_test COMMAND 98validate_binary_search_tree_test)

add_test(NAME 100same_tree_test COMMAND 100same_tree_test)
add_test(NAME 102binary_tree_level_order_traversal_test COMMAND 102binary_tree_level_order_traversal_test)
add_test(NAME 104maximum_depth_of_binary_tree_test COMMAND 104maximum_depth_of_binary_tree_test)
add_test(NAME 105construct_binary_tree_from_preorder_and_inorder_traversal_test COMMAND 105construct_binary_tree_from_preorder_and_inorder_traversal_test)

add_test(NAME 110balanced_binary_tree_test COMMAND 110balanced_binary_tree_test)

add_test(NAME 121best_time_to_buy_and_sell_stock_test COMMAND 121best_time_to_buy_and_sell_stock_test)
add_test(NAME 124binary_tree_maximum_path_sum_test COMMAND 124binary_tree_maximum_path_sum_test)
add_test(NAME 125valid_palindrome_test COMMAND 125valid_palindrome_test)
add_test(NAME 128longest_consecutive_sequence_test COMMAND 128longest_consecutive_sequence_test)

add_test(NAME 131palindrome_partitioning_test COMMAND 131palindrome_partitioning_test)

add_test(NAME 138copy_list_with_random_pointer_test COMMAND 138copy_list_with_random_pointer_test)
add_test(NAME 139word_break_test COMMAND 139word_break_test)

add_test(NAME 141linked_list_cycle_test COMMAND 141linked_list_cycle_test)
add_test(NAME 143reorder_list_test COMMAND 143reorder_list_test)
add_test(NAME 146lru_cache_test COMMAND 146lru_cache_test)

add_test(NAME 150evaluate_reverse_polish_notation_test COMMAND 150evaluate_reverse_polish_notation_test)
add_test(NAME 152maximum_product_subarray_test COMMAND 152maximum_product_subarray_test)
add_test(NAME 153find_minimum_in_rotated_sorted_array_test COMMAND 153find_minimum_in_rotated_sorted_array_test)
add_test(NAME 155min_stack_test COMMAND 155min_stack_test)

add_test(NAME 167two_sum_ii_test COMMAND 167two_sum_ii_test)

add_test(NAME 198house_robber_test COMMAND 198house_robber_test)
add_test(NAME 199binary_tree_right_side_view_test COMMAND 199binary_tree_right_side_view_test)
add_test(NAME 206reverse_linked_list_test COMMAND 206reverse_linked_list_test)
add_test(NAME 208implement_trie_prefix_tree_test COMMAND 208implement_trie_prefix_tree_test)

add_test(NAME 211design_add_and_search_words_data_structure_test COMMAND 211design_add_and_search_words_data_structure_test)
add_test(NAME 212word_search_ii_test COMMAND 212word_search_ii_test)
add_test(NAME 213house_robber_ii_test COMMAND 213house_robber_ii_test)

add_test(NAME 217contains_duplicate_test COMMAND 217contains_duplicate_test)
add_test(NAME 226invert_binary_tree_test COMMAND 226invert_binary_tree_test)

add_test(NAME 230kth_smallest_element_in_a_bst_test COMMAND 230kth_smallest_element_in_a_bst_test)

add_test(NAME 235lowest_common_ancestor_of_a_binary_search_tree_test COMMAND 235lowest_common_ancestor_of_a_binary_search_tree_test)
add_test(NAME 236lowest_common_ancestor_of_a_binary_tree_test COMMAND 236lowest_common_ancestor_of_a_binary_tree_test)
add_test(NAME 238product_of_array_except_self_test COMMAND 238product_of_array_except_self_test)
add_test(NAME 239sliding_window_maximum_test COMMAND 239sliding_window_maximum_test)

add_test(NAME 242valid_anagram_test COMMAND 242valid_anagram_test)
add_test(NAME 271encode_and_decode_strings_test COMMAND 271encode_and_decode_strings_test)
add_test(NAME 287find_the_duplicate_number_test COMMAND 287find_the_duplicate_number_test)
add_test(NAME 297serialize_and_deserialize_binary_tree_test COMMAND 297serialize_and_deserialize_binary_tree_test)

add_test(NAME 300longest_increasing_subsequence_test COMMAND 300longest_increasing_subsequence_test)

add_test(NAME 322coin_change_test COMMAND 322coin_change_test)
add_test(NAME 347top_k_frequent_elements_test COMMAND 347top_k_frequent_elements_test)

add_test(NAME 424longest_repeating_character_replacement_test COMMAND 424longest_repeating_character_replacement_test)
add_test(NAME 496next_greater_element_i_test COMMAND 496next_greater_element_i_test)

add_test(NAME 509fibonacci_number_test COMMAND 509fibonacci_number_test)

add_test(NAME 518coin_change_ii_test COMMAND 518coin_change_ii_test)
add_test(NAME 543diameter_of_binary_tree_test COMMAND 543diameter_of_binary_tree_test)
add_test(NAME 567permutation_in_string_test COMMAND 567permutation_in_string_test)
add_test(NAME 572subtree_of_another_tree_test COMMAND 572subtree_of_another_tree_test)

add_test(NAME 647palindromic_substrings_test COMMAND 647palindromic_substrings_test)

add_test(NAME 704binary_search_test COMMAND 704binary_search_test)
add_test(NAME 739daily_temperatures_test COMMAND 739daily_temperatures_test)
add_test(NAME 746min_cost_climbing_stairs_test COMMAND 746min_cost_climbing_stairs_test)

add_test(NAME 853car_fleet_test COMMAND 853car_fleet_test)
add_test(NAME 875koko_eating_bananas_test COMMAND 875koko_eating_bananas_test)
add_test(NAME 876middle_of_the_linked_list_test COMMAND 876middle_of_the_linked_list_test)
add_test(NAME 981time_based_key_value_store_test COMMAND 981time_based_key_value_store_test)

add_test(NAME 1448count_good_nodes_in_binary_tree_test COMMAND 1448count_good_nodes_in_binary_tree_test)

add_test(NAME 1804implement_trie_ii_prefix_tree_test COMMAND 1804implement_trie_ii_prefix_tree_test)

add_test(NAME 2574left_and_right_sum_differences_test COMMAND 2574left_and_right_sum_differences_test)
